# CPP-Klausur

./: .gitignore  README.md
123186456489/: CMakeLists.txt
501_EinundAusgabe/: CMakeLists.txt  main.cpp
502_ZeichenFinden/: main.cpp
505_EinfuegenLoeschen/: main.cpp
506_ZeichenkettenUndZahlen/: main.cpp
Abgabe2/: daten.cpp  daten.h  rechner.cpp  rechner.h  ui.h
AbgabeZuAufgabe2/: daten.cpp  daten.h  main.cpp  rechner.cpp  rechner.h  ui.cpp  ui.h
AbgabeZuNr2/: AbgabeZuNr2.pro  data.cpp  data.h  main.cpp  rechner.cpp  rechner.h  ui.cpp  ui.h
AbgabeZuNr2u2/: data.cpp  data.h  rechner.cpp  rechner.h  ui.cpp  ui.h
Arraylernen/: CMakeLists.txt
Aufgabe2Abgabe/: daten.cpp  daten.h  main.cpp  rechner.cpp  rechner.h  ui.cpp  ui.h
Bankgebueren/: CMakeLists.txt  main.cpp
Bausparvertrag/: CMakeLists.txt  main.cpp
DeluxTaschenrechner/: CMakeLists.txt  main.cpp
Einkaufsliste/: CMakeLists.txt  main.cpp
FormenBerechnen/: CMakeLists.txt  main.cpp
KalteKaffe/: CMakeLists.txt  main.cpp
Kopfrechentrainer/: CMakeLists.txt  main.cpp
Kreativ1/: CMakeLists.txt  main.cpp
Portoberechnung/: CMakeLists.txt  main.cpp
Primfaktorzerlegung/: CMakeLists.txt  main.cpp
Rechner/: CMakeLists.txt  main.cpp
Rechner-Schleife/: CMakeLists.txt  main.cpp
Rechner2/: CMakeLists.txt  main.cpp
Rechner3ForSchleife/: CMakeLists.txt  main.cpp
ShoppinglisteWidget/: CMakeLists.txt
Spasssssssssssss/: CMakeLists.txt  main.cpp
Stufe1Klassen/: Stufe1Klassen.pro  main.cpp  rechner.cpp  rechner.h  ui.cpp  ui.h
Suche/: main.cpp
TageVonMonaten/: CMakeLists.txt  main.cpp
TaschenrechnerWidget/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
TaschenrechnerWidget2/: CMakeLists.txt  widget.ui
Test123/: CMakeLists.txt
Variabelen-Tausch_Debugger/: CMakeLists.txt
Variabelen_Debugger/: CMakeLists.txt  main.cpp
WechselgeldBerechnen/: CMakeLists.txt  main.cpp
Wetterbericht/: CMakeLists.txt  main.cpp
ZulassungInDerOberstufe/: CMakeLists.txt  main.cpp
ZulassungOberstufeWidget/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
abgabe3/: abgabe3.pro  abgabe3.pro.user.f51eab2  daten.cpp  daten.h  main.cpp  rechner.cpp  rechner.h  ui.cpp  ui.h
untitled/: CMakeLists.txt
widerstandsrechner1/: main.cpp
